WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
278989
[GStreamer] Memory leak in GStreamerSinksWorkarounds
https://bugs.webkit.org/show_bug.cgi?id=278989
Summary
[GStreamer] Memory leak in GStreamerSinksWorkarounds
Philippe Normand
Reported
2024-09-01 11:55:55 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2024-09-01 11:57:55 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/33007
EWS
Comment 2
2024-09-02 01:22:15 PDT
Committed
283051@main
(03e1d775d51d): <
https://commits.webkit.org/283051@main
> Reviewed commits have been landed. Closing PR #33007 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-09-02 01:23:15 PDT
<
rdar://problem/135132206
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug