Cherry-pick 283051@main (03e1d775d51d). https://bugs.webkit.org/show_bug.cgi?id=278989

[GStreamer] Memory leak in GStreamerSinksWorkarounds
    https://bugs.webkit.org/show_bug.cgi?id=278989

    Reviewed by Alicia Boya Garcia.

    * Source/WebCore/platform/graphics/gstreamer/GStreamerSinksWorkarounds.cpp:
    (WebCore::AppSinkFlushCapsWorkaroundProbe::checkIsNeeded): Make sure the string allocated in
    gst_plugins_base_version_string() is de-allocated afterwards.

    Canonical link: https://commits.webkit.org/283051@main

Canonical link: https://commits.webkit.org/282416.41@webkitglib/2.46